<resources>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="app_name">My places</string>
    <string name="accion_mostrar">Show places</string>
    <string name="accion_preferencias">Settings</string>
    <string name="accion_acerca_de">About</string>
    <string name="accion_salir">Exit</string>
    <string name="nombre">Name</string>
    <string name="nombre_h">something that indetify the place</string>
    <string name="tipo">Type</string>
    <string name="direccion">Adress</string>
    <string name="direccion_h">adress of the place</string>
    <string name="telefono">Phone</string>
    <string name="telefono_h">contact phone</string>
    <string name="url">Url</string>
    <string name="url_h">website</string>
    <string name="comentario">Comments</string>
    <string name="comentario_h">introduce your notes</string>
    <string name="edicion_lugar">Edit place</string>
</resources>
