<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nombre"
            android:id="@+id/textView2"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t_nombre"
            android:hint="@string/nombre_h"
            android:layout_below="@+id/textView2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tipo"
            android:id="@+id/textView3"
            android:layout_below="@+id/t_nombre"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/s_tipo"
            android:layout_toRightOf="@+id/textView3"
            android:layout_below="@+id/t_nombre" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/direccion"
            android:id="@+id/textView4"
            android:layout_below="@+id/s_tipo"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPostalAddress"
            android:ems="10"
            android:id="@+id/t_direccion"
            android:layout_below="@+id/textView4"
            android:hint="@string/direccion_h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/telefono"
            android:id="@+id/textView5"
            android:layout_below="@+id/t_direccion"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:ems="10"
            android:id="@+id/t_telefono"
            android:layout_toRightOf="@+id/textView5"
            android:layout_below="@+id/t_direccion"
            android:hint="@string/telefono_h" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/url"
            android:id="@+id/textView6"
            android:layout_below="@+id/t_telefono"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t_url"
            android:layout_below="@+id/textView6"
            android:hint="@string/url_h"
            android:inputType="textUri" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/comentario"
            android:id="@+id/textView7"
            android:layout_below="@+id/t_url"
            android:textAppearance="?android:attr/textAppearanceMedium"/>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
            android:ems="10"
            android:id="@+id/t_comentario"
            android:layout_below="@+id/textView7"
            android:hint="@string/comentario_h" />
    </RelativeLayout>
</ScrollView>