<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:gravity="center">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:id="@+id/textView"
        style="@style/EstiloTexto"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_mostrar"
        android:id="@+id/button"
        style="@style/EstiloTexto.Botones"
        android:onClick="mostrarPreferencias" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_preferencias"
        android:id="@+id/button2"
        style="@style/EstiloTexto.Botones"
        android:onClick="lanzarPreferencias" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_acerca_de"
        android:id="@+id/button3"
        style="@style/EstiloTexto.Botones"
        android:onClick="lanzarAcercaDe" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/accion_salir"
        android:id="@+id/button4"
        style="@style/EstiloTexto.Botones"
        android:onClick="salir" />
</LinearLayout>
